[package]
name = "nfs"
version = "0.1.0"
edition = "2021"

[dependencies]

nfsserve = "0.10.*"
tokio = { version="1", features = [ "rt-multi-thread", "net", "io-util", "sync", "fs", "rt", "macros" ], default-features = false }
tracing-subscriber = { version = "0.3", features = ["tracing-log"]}
intaglio = { version = "1.6"}
futures = "0.3.21"
tracing = "0.1.31"
tracing-attributes = "0.1"
async-trait = "0.1.9"
